# oauth2/authz_admin_service/handlers/_accounts.py
@@ -4,7 +4,7 @@ import re
 import typing as T
 
 from aiohttp import web
-from rest_utils import etag_from_int, assert_preconditions
+from rest_utils import etag_from_int, assert_preconditions, ETagGenerator
 import sqlalchemy as sa
 
 from oauth2 import view
@@ -20,12 +20,6 @@ _ACCOUNTS = {
 }
 
 
-async def account_names_with_role(role: str):
-    return [
-        account_name for account_name, account in _ACCOUNTS.items() if role in account
-    ]
-
-
 class Accounts(view.OAuth2View):
 
     def __init__(self, *args, **kwargs):
@@ -38,18 +32,15 @@ class Accounts(view.OAuth2View):
 
     async def accounts(self):
         if self.__cached_accounts is None:
-            app = self.request.app
-            metadata: sa.MetaData = app['metadata']
-            async with app['engine'].acquire() as conn:
-                self.__cached_accounts = [
-                    Account(
-                        self.request,
-                        {'account': row['id_from_idp']},
-                        self.embed.get('item'),
-                        row=row
-                    )
-                    async for row in conn.execute(sa.select([metadata.tables['Accounts']]))
-                ]
+            self.__cached_accounts = list([
+                Account(
+                    self.request,
+                    {'account': row['id_from_idp']},
+                    self.embed.get('item'),
+                    row=row
+                )
+                async for row in database.accounts(self.request)
+            ])
         return self.__cached_accounts
 
     async def _links(self):
@@ -58,59 +49,32 @@ class Accounts(view.OAuth2View):
 
 class Account(view.OAuth2View):
 
-    def __init__(self, *args, row=None, **kwargs):
+    def __init__(self, *args, row=None,roles=None, **kwargs):
         super().__init__(*args, **kwargs)
-        if row is None:
-            self._id = None
-            # self._id_from_idp = None
-            # self._audit_id = None
-        else:
-            self._id = row['id']
-            self._id_from_idp = row['id_from_idp']
-            self._audit_id = row['audit_id']
-        self._roles = None
+        self._data = row
+        self._roles = roles
 
-    async def id(self):
-        if self._id is None:
-            app = self.request.app
-            table_accounts = app['metadata'].tables['Accounts']
-            async with app['engine'].acquire() as conn:
-                rows = await conn.execute(
-                    sa.select([table_accounts]).where(table_accounts.c.id_from_idp == self['account'])
-                )
-                row = await rows.fetchone()
-                if row is None:
-                    raise web.HTTPNotFound()
-                self._id = row['id']
-                self._id_from_idp = row['id_from_idp']
-                self._audit_id = row['audit_id']
-        return self._id
+    async def data(self):
+        if self._data is None:
+            self._data = await database.account(self.request, self['account'])
+            if self._data is None:
+                self._data = False
+        return self._data
 
-    async def id_from_idp(self):
-        await self.id()
-        return self._id_from_idp
-
-    async def audit_id(self):
-        await self.id()
-        return self._audit_id
-
-    async def roles(self) -> T.Set[T.Dict]:
-        id = await self.id()
+    async def roles(self) -> T.Set:
+        data = await self.data()
         if self._roles is None:
-            app = self.request.app
-            table_accountroles = app['metadata'].tables['AccountRoles']
-            async with app['engine'].acquire() as conn:
-                self._roles = set([
-                    {
-                        'id': row['id'],
-                        'role_id': row['role_id'],
-                        'grounds': row['grounds'],
-                        'audit_id': row['audit_id']
-                    } async for row in conn.execute(
-                        sa.select([table_accountroles])
-                        .where(table_accountroles.c.account_id == id)
-                    )
-                ])
+            self._roles = set([
+                AccountRole(
+                    self.request,
+                    {'account': self['account'], 'accountrole': row['role_id']},
+                    self.embed.get('accountrole'),
+                    row=row
+                ) async for row in database.accountroles(
+                    self.request,
+                    data['id']
+                )
+            ])
         return self._roles
 
     @property
@@ -119,26 +83,23 @@ class Account(view.OAuth2View):
 
     @property
     def link_title(self):
-        return "ADW account with email address <%s>" % self['account']
+        return "ADW account voor <%s>" % self['account']
 
-    @property
-    def etag(self):
-        try:
-            return etag_from_int(hash(self.roles()))
-        except web.HTTPNotFound:
+    async def etag(self):
+        if await self.data() is False:
             return None
+        role_ids = [
+            role['accountrole'] for role in await self.roles()
+        ]
+        role_ids.sort()
+        etag_generator = ETagGenerator()
+        for role_id in role_ids:
+            etag_generator.update(role_id)
+        return etag_generator.etag
 
     async def _links(self):
-        if self._roles is None:
-            raise web.HTTPNotFound()
         return {
-            'role': [
-                _roles.Role(
-                    self.request,
-                    {'role': role['role_id']},
-                    self.embed.get('role')
-                ) for role in await self.roles()
-            ]
+            'item': await self.roles()
         }
 
     async def put(self):
@@ -146,7 +107,7 @@ class Account(view.OAuth2View):
         if_none_match = self.request.headers.get('if-none-match', '')
         if if_match == '' and if_none_match == '':
             raise web.HTTPPreconditionRequired()
-        assert_preconditions(self.request, self.etag)
+        assert_preconditions(self.request, await self.etag())
         if not re.match(r'application/(?:hal\+)?json(?:$|;)',
                         self.request.content_type):
             raise web.HTTPUnsupportedMediaType()
@@ -183,40 +144,49 @@ class Account(view.OAuth2View):
         if_match = self.request.headers.get('if-match', '')
         if if_match == '':
             raise web.HTTPPreconditionRequired()
-        assert_preconditions(self.request, self.etag)
+        assert_preconditions(self.request, await self.etag())
         del _ACCOUNTS[self['account']]
         return web.Response(status=204)
+
 
 class AccountRole(view.OAuth2View):
 
     def __init__(self, *args, row=None, **kwargs):
         super().__init__(*args, **kwargs)
-        if row is None:
-            pass
-        else:
-            pass
+        self._data = row
+
+    async def data(self):
+        if self._data is None:
+            self._data = await database.accountrole(self.request, self['account'], self['accountrole'])
+            if self._data is None:
+                self._data = False
+        return self._data
+
+    async def etag(self):
+        data = await self.data()
+        if data is False:
+            return None
+        return etag_from_int(data['id'])
+
+    @property
+    def link_name(self):
+        return self['accountrole']
 
     @property
     def link_title(self):
-        return self['role']
+        return self['accountrole']
 
-    async def accounts(self):
-        if self.__cached_accounts is None:
-            app = self.request.app
-            metadata: sa.MetaData = app['metadata']
-            async with app['engine'].acquire() as conn:
-                self.__cached_accounts = [
-                    Account(
-                        self.request,
-                        {'account': row['id_from_idp']},
-                        self.embed.get('item'),
-                        row=row
-                    )
-                    async for row in conn.execute(sa.select([metadata.tables['Accounts']]))
-                ]
-        return self.__cached_accounts
+    async def attributes(self):
+        data = await self.data()
+        return {
+            'grounds': data['grounds']
+        }
 
     async def _links(self):
-        return {'item': await self.accounts()}
+        return {'role': _roles.Role(
+            self.request,
+            {'role': self['accountrole']},
+            self.embed.get('role')
+        )}
 
 
